--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -201,4 +201,5 @@ pt-BR:
       default: ! '%a, %d de %B de %Y, %H:%M:%S %z'
       long: ! '%d de %B de %Y, %H:%M'
       short: ! '%d de %B, %H:%M'
+      day_month: ! '%d/%m'
     pm: ''
